upgrade: container scan and trivy container

--- a/.github/trivy-container.yml
+++ b/.github/trivy-container.yml
@@ -1,43 +1,49 @@
 ---
+# Common settings for all scan types
 format: "sarif"
 timeout: "10m"
-exit-code: 1
-severity: "CRITICAL,HIGH,MEDIUM"
 ignore-unfixed: true
-vuln-type:
-  - "os"
-  - "library"
+
+# Default severity levels - adapted for different scan types in workflow
+severity:
+  - "CRITICAL"
+  - "HIGH"
+  - "MEDIUM"
+
+# Default scanners - adapted for different scan types in workflow
 scanners:
   - "vuln"
   - "secret"
   - "config"
 
-security-checks:
-  - "vuln"
-  - "secret"
-  - "config"
-
-# Skip dev dependencies to reduce false positives
-list-all-pkgs: false
-
-# Cache options
+# Cache options - enhanced for better performance
 cache:
   dir: ".trivy-cache"
-  ttl: "24h"
+  # Increased TTL to reduce unnecessary downloads
+  ttl: "48h"
 
 # Output format options
 output:
   include-non-failures: true
   report:
     - "all"
+  # Group findings by vulnerability type for clearer reports
+  format-version: 2
 
-# Secret scanning settings
+# Secret scanning settings - improved to reduce false positives
 secret:
   enable-builtin-rules: true
   disable-rules:
     - "generic-api-key"  # Too many false positives
+    - "github-pat"       # Often detects test tokens
+    - "aws-account-id"   # Low security risk
+  # Set minimum entropy to reduce false positives
+  entropy-threshold: 0.7
   exclude-dirs:
     - "tests"
+    - "docs"
+    - ".github"
+    - "examples"
 
 # Configuration rule settings
 config:
@@ -47,3 +53,15 @@ config:
     - "python"
   policy-namespaces:
     - "builtin"
+  # Skip dev dependency checking to reduce false positives
+  list-all-pkgs: false
+  # Skip specific rule IDs that generate noise for container scanning
+  skip-policy-update: false
+
+# Filtering options
+private-registries:
+  - url: localhost
+    insecure: true
+
+# Exit-code is set in the workflow to adjust for PR vs scheduled scans
+exit-code: 0
