--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: llm-rag-config
+  labels:
+    app: llm-rag
+    component: api
 data:
   config.yaml: |
     model:
@@ -16,3 +19,4 @@ data:
     app:
       host: "0.0.0.0"
       port: 8000
+      log_level: "INFO"
