--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -12,7 +12,7 @@ spec:
     app: llm-rag
   ports:
     - port: 80
-      targetPort: http
+      targetPort: 8000
       protocol: TCP
       name: http
   type: ClusterIP
