--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -8,7 +8,7 @@ permissions:
 on:
   schedule:
     # Run weekly on Sunday at 1:00 AM UTC
-    - cron: "0 1 * * 0"
+   # - cron: "0 1 * * 0"
   workflow_dispatch:
     # Allow manual triggering of the workflow
 
