--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -6,7 +6,7 @@ permissions:
   security-events: write
 
 on:
-  schedule:
+ # schedule:
     # Run weekly on Sunday at 1:00 AM UTC
    # - cron: "0 1 * * 0"
   workflow_dispatch:
