--- a/.github/workflows/container-scan.yml
+++ b/.github/workflows/container-scan.yml
@@ -26,7 +26,7 @@ on:
           - quick
           - full
   schedule:
-    - cron: "0 1 * * 1" # Weekly Monday 1:00 AM UTC
+    # - cron: "0 1 * * 1" # Weekly Monday 1:00 AM UTC
 
 jobs:
   container-scan:
